--- a/css/style.css
+++ b/css/style.css
@@ -3,28 +3,94 @@ body {
   margin: 0;
   padding: 0;
 }
-.top-banner {
-  background-image: url(../images/top-banner.png);
+.shared {
   background-repeat: no-repeat;
   display: flex;
+  margin-bottom: 150px;
+}
+.top-banner {
+  background-image: url(../images/top-banner.png);
 }
 .upper {
   width: 50%;
   padding-left: 5%;
 }
 .upper h1 {
-  font-size: 40px;
+  font-size: 45px;
+  line-height: 80px;
+}
+.upper h2 {
+  font-weight: 500;
+}
+.upper p {
+  line-height: 25px;
 }
 .upper .name {
   color: #e6b802e9;
-  font-size: 50px;
+  font-size: 55px;
+}
+.upper img {
+  width: 90%;
 }
 
 .link-btn {
   text-transform: uppercase;
   text-decoration: none;
   background-image: linear-gradient(to right, #ec5151, #e19b38);
+  border-radius: 10px;
   color: #ffffff;
   font-weight: 800;
   padding: 10px 40px;
+}
+.aside-banner {
+  background-image: url(../images/dream-bg.png);
+  background-position: right;
+}
+.aside-banner .upper h3 {
+  font-size: 40px;
+}
+.aside-banner .upper h4 {
+  font-size: 25px;
+  font-weight: 500;
+}
+.Experience {
+  background-image: url(../images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
+}
+.parrent .child h3 {
+  font-size: 40px;
+}
+.parrent .child h4 {
+  font-size: 20px;
+  color: #c9de2b;
+}
+.parrent .child p {
+  line-height: 25px;
+}
+.parrent {
+  /* background-color: #ffffff; */
+}
+.Experience h2 {
+  font-size: 50px;
+  font-weight: 600;
+}
+.child {
+  width: 40%;
+  margin: 0 5%;
+  padding-left: 25px;
+  box-sizing: border-box;
+  box-shadow: 10px 10px 30px 5px #aa9d9a;
+  height: 400px;
+}
+.border1 {
+  border-left: 7px solid #c4a82d;
+}
+.border2 {
+  border-left: 7px solid blue;
+}
+footer p {
+  text-align: center;
+  color: #ac6503;
+  font-size: 20px;
 }
